import bootstrap into my base.scss so i can extend

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,4 +1,13 @@
-/*BEM
-B-Block(component)
-E-Element(tag)
-M-Modifier(version/state)*/
+@import './bootstrap';
+
+img {
+  max-width: 150px;
+}
+
+button {
+  @extend .btn;
+
+  &.primary {
+    @extend .btn-primary;
+  }
+}
