--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,63 +1,3 @@
 @import './bootstrap';
-
-img {
-  max-width: 150px;
-}
-
-button {
-  @extend .btn;
-
-  &.primary {
-    @extend .btn-primary;
-  }
-}
-
-table {
-  @extend .table;
-}
-
-.info {
-  @extend .glyphicon;
-  @extend .glyphicon-info-sign;
-}
-
-// .loading {
-//   position: fixed;
-//   top: 0;
-//   left: 0;
-//   z-index: 40;
-//   opacity: 0;
-//   -webkit-transition: opacity 0.4s linear 0.4s;
-//   transition: opacity 0.4s linear 0.4s;
-//   width: 100%;
-//   height: 3px;
-//
-//   &.isLoading {
-//     opacity: 1;
-//   }
-// }
-
-@keyframes loadingAnimation {
-  from {
-    width: 0%;
-  }
-
-  to {
-    width: 100%;
-  }
-}
-
-.loading {
-  position: fixed;
-  top: 0;
-  left: 0;
-  z-index: 40;
-  height: 3px;
-  background-color: rgba(125, 161, 208, 0.58);
-
-  &.isLoading {
-    animation-duration: 0.5s;
-    animation-name: loadingAnimation;
-    animation-iteration-count: infinite;
-  }
-}
+@import './general';
+@import './animation';
