refactored autocomplete into navbar

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -1,5 +1,9 @@
-@import './bootstrap';
-@import './layout';
-@import './general';
-@import './animation';
-@import './navbar';
+@import
+'./bootstrap',
+'./layout',
+'./general',
+'./animation',
+'./navbar',
+'./forms',
+'./autocomplete'
+;
